Changed name on norsk skogkatt so that the picture is visible

--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -66,6 +66,7 @@ input {
     color: white;
     font-size: 15px;
     text-decoration: none;
+    margin: 8px;
 }
 
 a, a:link:active, a:visited:active {
