Connected preferences with view and updated stylesheet

--- a/src/main/resources/templates/animalProfile.html
+++ b/src/main/resources/templates/animalProfile.html
@@ -9,6 +9,7 @@
 <body>
 <!-------- ANIMAL GALLERY + MATCH HEART -------->
 <div id="animalGalleryDiv">
+    <a class="leftArrowAtagWhite" th:href="'/buyerAllAnimalsView'"><p id="arrowPtag">&#60;</p></a>
     <img id="animalProfileGallery" th:src="${animal.getAnimalImg1()}" alt="">
 </div>
 
