--- a/src/main/resources/templates/reg1_newUser.html
+++ b/src/main/resources/templates/reg1_newUser.html
@@ -15,7 +15,7 @@
 
 <header>
     <div class="headerNyBruker">
-        <p id="headerLoginTekst">Ny bruker</p>
+        <p id="headerLoginTekst">Registrer deg</p>
     </div>
 </header>
 
@@ -42,7 +42,7 @@
             <input th:field="*{password}" class="inputs" type="password" placeholder="Passord">
             
             <div id="submitBox">
-                <input id="orangeButton" type="submit" value="Registrer  →">
+                <input class="orangeButton" type="submit" value="Fortsett">
             </div>
         </div>
     </form>
