--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -46,7 +46,7 @@ input {
     opacity: 0.7;
 }
 
-#orangeButton {
+.orangeButton {
     border-radius: 15px;
     border: 0;
     padding: 10px;
@@ -130,12 +130,11 @@ a, a:link:active, a:visited:active {
     justify-content: center;
 }
 
-/*
 .introTekst {
     text-align: center;
     width: 170px;
 }
-*/
+
 .containerLoginSignup {
     display: flex;
     flex-direction: row;
@@ -331,7 +330,7 @@ a, a:link:active, a:visited:active {
 
 #sellerViewAnimalPic {
     object-fit: cover;
-    width: 300px;
+    width: 375px;
     height: 150px;
 }
 
