Finished user and animal profile picture upload pages

--- a/src/main/resources/templates/reg6_animalPicture.html
+++ b/src/main/resources/templates/reg6_animalPicture.html
@@ -59,7 +59,7 @@
         })
     </script>
 
-    <form method="post" th:action="'/userProfile/' + ${user.id} + '/bilde'">
+    <form method="post" th:action="'/animalProfile/' + ${animal.id} + '/bilde'">
         <input name="imageUrl" type="hidden">
         <input type="submit">
     </form>
