Changed intropage, added about and faq. not finished yet

--- a/src/main/resources/static/intropage.css
+++ b/src/main/resources/static/intropage.css
@@ -45,6 +45,14 @@ header {
     justify-content: center;
 }
 
+.containerFaqAbout {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 12px;
+}
+
+
 .buttonNoColor {
     border-radius: 20px;
     border: 0;
