--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -29,8 +29,8 @@
         </a>
 
         <div id="textIconContainer">
-            <p th:text="${eachAnimal.name}">Kira</p>
-            <img class="heartIconStyle" src="image/redHeart.png" alt="">
+            <p th:text="${eachAnimal.name + ' ' + eachAnimal.age + ' år'}">Kira</p>
+            <img class="heartAmount" src="image/redHeart.png" alt="">
         </div>
     </div>
 </div>
