--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Pet Match | Brukerprofil</title>
 </head>
 
@@ -15,18 +15,22 @@
         <p>Brukerprofil</p>
     </div>
 </header>
-
+<a class="leftArrowAtag" th:href="'/sellersAnimalLikes/' + ${animalId}"><p id="arrowPtag">&#60;</p></a>
 <!-------- USER PICTURE + NAME -------->
 <div id="userPicNameDiv">
-    <img id="userPic" th:src="${user.getUserImg()}" alt="">
-    <h3 th:text="${user.getFirstName()} + ' ' + ${user.getLastName()}">Kristine Hansen</h3>
+    <div class="centerDivs">
+        <img id="userPic" th:src="${user.getUserImg()}" alt="">
+    </div>
+    <div class="centerDivs">
+        <h3 th:text="${user.getFirstName()} + ' ' + ${user.getLastName()}">Kristine Hansen</h3>
+    </div>
 </div>
 
-<hr id="userProfileLine">
+<hr class="userProfileLine">
 
 <!-------- USER BIO + PREFERENCES -------->
 
-<div id="userBioContainer">
+<div class="userBioContainer">
     <div>
         <p th:text="${user.getBio()}">Lorem Ipsum er rett og slett dummytekst fra
             og for trykkeindustrien. Lorem Ipsum har
