--- a/src/main/resources/templates/buyerMatches.html
+++ b/src/main/resources/templates/buyerMatches.html
@@ -8,6 +8,10 @@
     <title>Pet Match | Matcher</title>
 </head>
 <body>
+<style>
+    @import url("/stylesheet.css");
+    @import url("/indexHB.css");
+</style>
 <!-------- HEADER -------->
 <div class="dyrMatchHeaderDiv">
     <a class="NotActive" href="/buyerAllAnimalsView"><p class="textInActiveNotActive">Dyr</p></a>
