--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/indexHB.css">
     <title>Pet Match | Dine dyr</title>
 </head>
 <body>
@@ -15,8 +16,6 @@
     </div>
 </header>
 
-<!-------- MENU -------->
-<!--<div class="menu" th:include="templates :: menu"></div>-->
 
 <!-------- MAIN -------->
 
@@ -34,6 +33,9 @@
         </div>
     </div>
 </div>
+
+<!-------- MENU -------->
+<div class="menu" th:include="templates :: menu"></div>
 
 </body>
 </html>
