--- a/src/main/resources/templates/buyerAllAnimalsView.html
+++ b/src/main/resources/templates/buyerAllAnimalsView.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="indexHB.css">
+    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="/indexHB.css">
     <title>Pet Match | Alle dyr</title>
 </head>
 <body>
+
 <!-------- HEADER -------->
 <div class="dyrMatchHeaderDiv">
     <a class="Active" href="/buyerAllAnimalsView"><p class="textInActiveNotActive">Dyr</p></a>
@@ -39,6 +40,8 @@
 </div>
 
 <!-------- MENU -------->
+
 <div class="menu" th:include="templates :: menu"></div>
+
 </body>
 </html>
