Added favicon to all pages

--- a/src/main/resources/templates/allAnimals.html
+++ b/src/main/resources/templates/allAnimals.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="indexHB.css">
     <title>Pet Match | Alle dyr</title>
+    <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 <body>
 <!-------- HEADER -------->
