--- a/src/main/resources/templates/buyerAllAnimalsView.html
+++ b/src/main/resources/templates/buyerAllAnimalsView.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="image/paw.png">
     <link rel="stylesheet" href="/stylesheet.css">
     <link rel="stylesheet" href="/indexHB.css">
     <title>Pet Match | Alle dyr</title>
