--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Preferanser</title>
+    <link rel="icon" type="image/png" href="image/paw.png">
 <!--    <link rel="stylesheet" type="text/css" href="../stylesheet.css">-->
 <!--    <link rel="stylesheet" type="text/css" href="../indexHB.css">-->
 </head>
