--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
     <title>Pet Match | Logg inn</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Logg inn</title>
+    <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 
 <body>
