--- a/src/main/resources/templates/reg2_userType.html
+++ b/src/main/resources/templates/reg2_userType.html
@@ -7,6 +7,7 @@
     <title>Pet Match | Logg inn</title>
     <link rel="stylesheet" type="text/css" href="../stylesheet.css">
     <link rel="stylesheet" type="text/css" href="indexHB.css">
+    <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 
 </head>
