--- a/src/main/resources/templates/reg4_buyer.html
+++ b/src/main/resources/templates/reg4_buyer.html
@@ -6,6 +6,7 @@
     <title>Preferanser</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="indexHB.css">
+    <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 <body>
 
