--- a/src/main/resources/templates/reg6_animalPicture.html
+++ b/src/main/resources/templates/reg6_animalPicture.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>PetMatch | Last opp profilbilde</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="icon" type="image/png" href="image/paw.png">
     <script>
         UPLOADCARE_PUBLIC_KEY = '3a73fb11eb76a50c3d05';
     </script>
