--- a/src/main/resources/templates/startPage.html
+++ b/src/main/resources/templates/startPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Pet Match | Start</title>
+    <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 <body>
 
