--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/stylesheet.css">
     <link rel="stylesheet" href="/indexHB.css">
     <title>Pet Match | Brukerprofil</title>
+    <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 
 <body>
