Trying to fix SQL

--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="/indexHB.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="indexHB.css">
     <title>Pet Match | Ditt dyr</title>
     <link rel="icon" type="image/png" href="image/paw.png">
 </head>
