Trying to fix SQL v3

--- a/src/main/resources/templates/allAnimals.html
+++ b/src/main/resources/templates/allAnimals.html
@@ -30,6 +30,6 @@
 </div>
 
 <!-------- MENU -------->
-<div class="menu" th:include="templates :: menu"></div>
+<!--<div class="menu" th:include="templates :: menu"></div>-->
 </body>
 </html>
