--- a/src/main/resources/templates/buyerAllAnimalsView.html
+++ b/src/main/resources/templates/buyerAllAnimalsView.html
@@ -28,7 +28,7 @@
             </a>
 
             <div th:if="${matchedAnimals.contains(eachAnimal)}">
-                <img class="heartIconStyle" src="image/redHeart.png" alt="">
+                <img class="heartIconStyleRed" src="image/redHeart.png" alt="">
             </div>
 
             <div th:unless="${matchedAnimals.contains(eachAnimal)}">
